Fix overflow gallery image size

--- a/src/styles/materials/components/overflow-gallery/overflow-gallery.scss
+++ b/src/styles/materials/components/overflow-gallery/overflow-gallery.scss
@@ -15,6 +15,8 @@
   &__item {
     flex: 1 0 auto;
     scroll-snap-align: start;
+    width: 80%;
+    max-width: 80%;
 
     &:only-child {
       width: 100%;
